--- a/game.ipynb
+++ b/game.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# class AnswerHistory(self):\n",
+    "#     def __init__(self):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,13 +93,16 @@
     "    def get_answer(self):\n",
     "        return eval(str(self))\n",
     "    \n",
+    "    def is_attempt_correct(self, attempt):\n",
+    "        return self.get_answer() == attempt\n",
+    "    \n",
     "    def __hash__(self):\n",
     "        return hash((self.operation, *sorted((self.first_operand, self.second_operand))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +140,7 @@
     "            t0 = time.time()\n",
     "            answer = int(input(f'{question} = '))\n",
     "            t1 = time.time()\n",
-    "            correct = question.get_answer() == answer\n",
+    "            correct = question.is_attempt_correct(answer)\n",
     "            time_taken = t1 - t0\n",
     "            self.player.update(question, Answer(answer, time_taken))\n",
     "            print('Correct' if correct else 'Wrong', f'in {time_taken:0.3f}s')"
@@ -135,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,14 +163,16 @@
     "        for i in range(self.n_questions):\n",
     "            question = self.questionGenerator.get()\n",
     "            print(question)\n",
-    "            a1 = self.player1.answer(question)\n",
-    "            a2 = self.player2.answer(question)\n",
+    "            player1_answer = self.player1.answer(question)\n",
+    "            player2_answer = self.player2.answer(question)\n",
+    "            player1_answer.answer\n",
+    "            \n",
     "            print('Player 1:', a1, '| Player 2:', a2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,59 +182,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2 * 1 = 2\n",
-      "Correct in 2.399s\n",
-      "2 * 2 = 4\n",
-      "Correct in 1.351s\n",
-      "2 * 6 = 12\n",
-      "Correct in 1.568s\n",
-      "2 * 3 = 6\n",
-      "Correct in 1.716s\n"
-     ]
+     "data": {
+      "text/plain": [
+       "defaultdict(list,\n",
+       "            {2 * 8: [16 in 3.026s],\n",
+       "             2 * 5: [10 in 2.040s],\n",
+       "             2 * 2: [4 in 1.214s, 4 in 1.120s]})"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "TrainingSession(p1, 4, '*', 2).train()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2 * 10 = 20\n",
-      "Correct in 1.478s\n",
-      "2 * 6 = 12\n",
-      "Correct in 1.391s\n",
-      "2 * 1 = 2\n",
-      "Correct in 1.143s\n",
-      "2 * 5 = 10\n",
-      "Correct in 1.604s\n"
-     ]
-    }
-   ],
-   "source": [
-    "TrainingSession(p2, 4, '*', 2).train()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c = Competition(p1, p2, 4, '*', 2)"
+    "p1.history"
    ]
   },
   {
@@ -231,14 +212,71 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2 * 8 = 16\n",
+      "Correct in 3.026s\n",
+      "2 * 5 = 10\n",
+      "Correct in 2.040s\n",
+      "2 * 2 = 4\n",
+      "Correct in 1.214s\n",
+      "2 * 2 = 4\n",
+      "Correct in 1.120s\n"
+     ]
+    }
+   ],
+   "source": [
+    "TrainingSession(p1, 4, '*', 2).train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 * 6 = 12\n",
+      "Correct in 1.206s\n",
+      "2 * 7 = 14\n",
+      "Correct in 1.685s\n",
+      "2 * 3 = 6\n",
+      "Correct in 1.371s\n",
+      "2 * 1 = 2\n",
+      "Correct in 0.943s\n"
+     ]
+    }
+   ],
+   "source": [
+    "TrainingSession(p2, 4, '*', 2).train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = Competition(p1, p2, 4, '*', 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 * 9\n",
+      "Player 1: 10 in 7.522s | Player 2: 2 in 8.614s\n",
       "2 * 2\n",
-      "Player 1: 4 in 1.351s | Player 2: 9 in 5.841s\n",
-      "2 * 4\n",
-      "Player 1: 4 in 6.893s | Player 2: 7 in 9.258s\n",
-      "2 * 1\n",
-      "Player 1: 2 in 2.399s | Player 2: 2 in 1.143s\n",
-      "2 * 2\n",
-      "Player 1: 4 in 1.351s | Player 2: 10 in 9.948s\n"
+      "Player 1: 4 in 1.214s | Player 2: 3 in 8.850s\n",
+      "2 * 5\n",
+      "Player 1: 10 in 2.040s | Player 2: 1 in 7.161s\n",
+      "2 * 10\n",
+      "Player 1: 9 in 5.997s | Player 2: 7 in 9.019s\n"
      ]
     }
    ],
@@ -270,7 +308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
